# lb-stack-setup

./: .gitignore  .gitlab-ci.yml  .gitmodules  .known_hosts  CMakeLists.txt  CMakePresets.json  CTestXML2HTML.cmake  Future.py  Makefile  README.md  binary_tag  build-env  checkout.py  cmake  compile.sh  config  config.py  configuration.mk  cpp_prefix.sh  create_distcc_wrappers.py  ctest  default-config.json  default.config  dictionary.txt  distcc  flake8  gdbinit  gen_make_definitions.py  gen_make_deps.py  get-config  helpers.sh  host_os  install-ccache.sh  install-cmake.sh  install-common.sh  install-distcc.sh  install-ninja.sh  install-tools.sh  install.sh  lb-docker-run  (+20 more)
ci-utils/: Dockerfile  framework.sh  make-mono-script.sh  make-script.sh  test-build-env.sh  test-cmake.sh  test-contrib.sh  test-distcc.sh  test-misc.sh  test-test.sh  time-setup-make.py
doc/: distcc-server.md  prerequisites.md  ssh.md  vscode.md
doc/media/: vscode-debug-gdb.webm  vscode-debug-python.webm
docker/: Dockerfile  entrypoint.sh
stack-vscode/: settings.json
test/: test-build-env.sh  test-toolchain.sh
